Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-29463

mysqlimport occasionally fails to fail in main.mysqldump

    XMLWordPrintable

Details

    Description

      Ever since MDEV-23097 was closed, the test main.mysqldump only seems to fail in the 10.10 and 10.11 branches. Here is a recent example on Fedora 36, AMD64:

      10.10 f6118acda961a7fde17f2984d7600e211cd47ee3

      main.mysqldump 'innodb'                  w1 [ fail ]
              Test ended at 2022-09-02 15:05:57
       
      CURRENT_TEST: main.mysqldump
      mysqldump: Couldn't find table: "non_existing"
      mysqldump: Got error: 1356: "View 'test.v1' references invalid table(s) or column(s) or function(s) or definer/invoker of view lack rights to use them" when using LOCK TABLES
      mysqldump: Couldn't execute 'SHOW FIELDS FROM `v1`': View 'test.v1' references invalid table(s) or column(s) or function(s) or definer/invoker of view lack rights to use them (1356)
      mysqldump: Got error: 1083: "Field separator argument is not what is expected; check the manual" when executing 'SELECT INTO OUTFILE'
      mysqldump: Got error: 1083: "Field separator argument is not what is expected; check the manual" when executing 'SELECT INTO OUTFILE'
      mysqldump: Got error: 1083: "Field separator argument is not what is expected; check the manual" when executing 'SELECT INTO OUTFILE'
      mysqldump: user2 has insufficient privileges to SHOW CREATE PROCEDURE `sp1`!
      mysqldump: Got error: 1146: "Table 'test.???????????????????????' doesn't exist" when using LOCK TABLES
      /usr/bin/mysqlimport: Error: 1146, Table 'test.words' doesn't exist, when using table: words
      mysqltest: At line 1773: command "$MYSQL_IMPORT --silent --use-threads=2 test $MYSQLTEST_VARDIR/tmp/t1.txt $MYSQLTEST_VARDIR/tmp/t2.txt $MYSQLTEST_VARDIR/std_data/words.dat $MYSQLTEST_VARDIR/std_data/words2.dat" failed with wrong error: 0
      

      Attachments

        Issue Links

          Activity

            People

              serg Sergei Golubchik
              marko Marko Mäkelä
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1.25h
                  1.25h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.