MDEV-29463 mysqlimport occasionally fails to fail in main.mysqldump

don't invoke atexit handlers if other threads are still running,
OpenSSL doesn't like concurrent cleanup (and who does?)